# itu-sdse-project-jtc

exam_project/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
exam_project/customer_classification_model/: __init__.py  data_utils.py  dataset.py  features.py  main.py  mlflow_utils.py  plots.py  utils.py
exam_project/customer_classification_model/modeling/: predict.py  preprocessing.py  train.py
exam_project/docs/: mkdocs.yml
exam_project/docs/docs/: index.md
