[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "customer_classification_model"
version = "0.0.1"
description = "Exam project in the course Data Science in Production"
authors = [
  { name = "JTC" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["customer_classification_model"]
include = ["pyproject.toml", "customer_classification_model/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["customer_classification_model"]
force-sort-within-sections = true

